notifier: Read the AppStream metadata only while checking for a distro upgrade

The notifier built an AppStream pool when it started and held it until logout,
to answer one question: whether a newer release of the distribution exists.
That question is asked five minutes after login and once a day after that, and
only where PackageKit can upgrade the system at all.

Holding the pool is what costs the memory. Measured against a catalog of 3000
components, a pool takes 70 MB of resident memory while its cache is cold and
2 MB once it is warm, which is why the notifier is small on some machines and
not on others: a catalog that was refreshed since the cache was built is read
from its files. Letting go of the pool hands nothing back on its own, the
allocator keeps the heap, so a session that began with a cold cache carried all
of it to logout.

The default flags also read metainfo files and Flatpak metadata, neither of
which can hold a distribution component. On the machine this was measured on
that is 10.8 MB against 2.1 MB for the catalog alone.

The pool is now built inside the check, from the catalog alone, and let go of
when the check is done, and what it needed is handed back to the system.
A machine PackageKit cannot upgrade never builds one at all. The check also
reads the metadata as it stands rather than as it stood at login.

BUG: 509180